# Learning-ESP32

./: README.md
docs/boards/super-mini/: bom.md
docs/boards/yd-esp32-c3/: bom.md
docs/expansions/i2c/ pressure-temperature-sensor-bmp180/: bmp180-notes.md
docs/expansions/spi/led-matrix-max7219/: max7219-notes.md
examples/baremetal/custom_build_make/: Makefile
examples/baremetal/custom_init/esp32c3/: custom_init.h
examples/baremetal/general_perpose_timer/: CMakeLists.txt
examples/baremetal/interrupts_system_timer/: CMakeLists.txt
examples/baremetal/led_blink/: CMakeLists.txt
examples/baremetal/led_blink/bootloader_components/main/: CMakeLists.txt  boot_watchdogs.c  main.c
examples/baremetal/led_blink/bootloader_components/main/include/: boot_watchdogs.h
examples/baremetal/main_watchdog_timer/: CMakeLists.txt
examples/baremetal/system_timer/: CMakeLists.txt
examples/baremetal/system_timer/bootloader_components/main/: CMakeLists.txt  Kconfig.projbuild  main.c  system_timer_hal.c
examples/esp32c3_baremetal/custom_build_cmake/: CMakeLists.txt  riscv-toolchain.cmake
examples/esp32c3_baremetal/custom_build_make/: linker.ld  main.c
examples/esp32c3_baremetal/general_perpose_timer/bootloader_components/main/: CMakeLists.txt  general_perpose_timer_hal.c  general_perpose_timer_ll.c
examples/esp32c3_baremetal/interrupts_system_timer/bootloader_components/main/: CMakeLists.txt  Kconfig.projbuild
examples/esp32c3_baremetal/spi_max7219/: CMakeLists.txt  sdkconfig
examples/esp32c3_baremetal/spi_max7219/bootloader_components/main/: CMakeLists.txt  Kconfig.projbuild  main.c  max7219.c  max7219.h
examples/freertos/event_groups/event_set/: CMakeLists.txt
examples/freertos/event_groups/event_set/main/: main.c
examples/freertos/event_groups/event_sync/: CMakeLists.txt
examples/freertos/notification/notify_as_binary_semaphore/: CMakeLists.txt
examples/freertos/notification/notify_as_counting_semaphore/: CMakeLists.txt  sdkconfig.defaults
examples/freertos/notification/notify_as_event_group/: CMakeLists.txt
examples/freertos/notification/notify_as_queue/: CMakeLists.txt
examples/freertos/queue/mailbox/: CMakeLists.txt
examples/freertos/queue/queue/: CMakeLists.txt
examples/freertos/queue/queue_set/: CMakeLists.txt  sdkconfig.defaults
examples/freertos/queue/stack/: CMakeLists.txt
examples/freertos/semaphores/binary_semaphore/: CMakeLists.txt
examples/freertos/semaphores/counting_semaphore/: CMakeLists.txt
examples/freertos/semaphores/mutex/: CMakeLists.txt
examples/freertos/semaphores/recursive_semaphore/: CMakeLists.txt
examples/freertos/tasks/create_delete/: CMakeLists.txt
examples/freertos/tasks/delay/: CMakeLists.txt
examples/freertos/tasks/set_get_priority/: CMakeLists.txt
examples/freertos/tasks/suspend_resume/: CMakeLists.txt
examples/freertos/tasks/task_utils/: CMakeLists.txt  sdkconfig.defaults
examples/freertos/timers/autoreload/: CMakeLists.txt
examples/freertos/timers/change_period/: CMakeLists.txt
examples/freertos/timers/one_shot/: CMakeLists.txt
examples/freertos/timers/pending_function/: CMakeLists.txt
examples/freertos/timers/timer_id/: CMakeLists.txt
examples/freertos_custom_port/: CMakeLists.txt  FreeRTOSConfig.h  linker.ld  main.c  sdkconfig.h
examples/freertos_custom_port/include/app/: FreeRTOSConfig.h
examples/freertos_custom_port/include/portable/: portContext.h  portmacro.h
examples/freertos_custom_port/src/: main.c  port.c  portASM.S
examples/freertos_custom_port/src/app/: main.c
examples/freertos_custom_port/src/portable/: port.c  portASM.S
examples/idf_peripheral_api/adc/continuous/: CMakeLists.txt
examples/idf_peripheral_api/adc/oneshot/: CMakeLists.txt
examples/idf_peripheral_api/gpio/gpio_led_blink/: CMakeLists.txt
examples/idf_peripheral_api/gpio/gpio_led_blink_dedicated/: CMakeLists.txt
examples/idf_peripheral_api/gpio/gpio_led_button_interrupt/: CMakeLists.txt
examples/idf_peripheral_api/gpio/gpio_led_button_polling/: CMakeLists.txt
examples/idf_peripheral_api/gptimer/led_blink/: CMakeLists.txt
examples/idf_peripheral_api/i2c/bmp180_measure/: CMakeLists.txt
examples/idf_peripheral_api/ledc/ledc_fade_hardware/: CMakeLists.txt
examples/idf_peripheral_api/ledc/ledc_fade_software/: CMakeLists.txt
examples/idf_peripheral_api/sdm/sdm_led/: CMakeLists.txt
examples/idf_peripheral_api/spi/max7219_blink/: CMakeLists.txt
examples/idf_peripheral_api/spi/max7219_heart/: CMakeLists.txt
examples/idf_peripheral_api/spi/max7219_with_adc/: CMakeLists.txt  sdkconfig.defaults
examples/idf_peripheral_api/temp_sensor/temp_sensor/: CMakeLists.txt
examples/idf_peripheral_api/uart/uart_loop/: CMakeLists.txt
examples/led_and_button/: CMakeLists.txt
examples/led_and_button/main/: CMakeLists.txt  Kconfig.projbuild  led_and_button.h  led_and_button_driver.c  led_and_button_hal.c  led_and_button_ll.c  led_and_button_soc.c  main.c
examples/led_matrix_max7219/: CMakeLists.txt
examples/led_matrix_max7219/components/max7219/: CMakeLists.txt  max7219.c
examples/led_matrix_max7219/main/: CMakeLists.txt  Kconfig.projbuild  led_matrix_max7219.c  led_matrix_max7219.h  main.c
examples/nimble/adc_broadcaster/: CMakeLists.txt
examples/nimble/adc_broadcaster/main/: CMakeLists.txt  main.c
examples/nimble/adc_server/: CMakeLists.txt  sdkconfig.defaults
examples/nimble/adc_server/main/: CMakeLists.txt  gap.c  gatt.c  main.c
examples/nimble/rgb_led_client/: CMakeLists.txt  sdkconfig.defaults
examples/nimble/rgb_led_client/main/: CMakeLists.txt  gap.c  main.c
examples/nimble/rgb_led_server/: CMakeLists.txt
examples/nimble/rgb_led_server/main/: CMakeLists.txt  gap.c  gatt.c  main.c
notes/c3/: esp32-c3-clock.md  esp32-c3-cpu-spi-master.md  esp32-c3-general-perpose-timer.md  esp32-c3-gpio.md  esp32-c3-interrupts.md  esp32-c3-main-watchdog-timer.md  esp32-c3-system-timer.md  exp32-c3-pins.md
notes/software/: IDF.md  NimBLE.md  application-startup.md  bootloader_override_example.md  freertos-naming.md  gpio-api.md  interrupt-alocation.md  low-level-soc-api.md
(+58 files in other folders)
